# GilgaMesh

./: .gdbinit  .gitignore  .shortcuts  CMakeLists.txt  LICENSE  README.md  build  build.sh  go  make_update.cmd  makefile  setup.sh  test.sh  updating_from_sdk9.txt
_build/: .gitignore
bootloader/: Makefile  dfu_transport_ble.c  main.c
bootloader/ble400/: Makefile
bootloader/bsp/: ble400.h  boards.h  pca10028.h  (+1 more)
config/: Config.h  ble400.h  board_pca10036.h  boards.h  conn_packets.h  device_manager_cnfg.h  fds_config.h  nrf_drv_config.h  pca10028.h  pstorage_platform.h  sdk_config.h  seeed.h  version.h
deploy/: deploy-from-1-on.sh  deploy-meshy-swd.jlink  deploy.jlink  full_deploy.jlink  reset-to-factory.jlink  single-fruitymesh-softdevice-deploy.jlink  single-mesh-only-deploy.jlink  single-softdevice-bootloader-deploy.jlink  single-softdevice-meshymesh-deploy-swd.jlink  single-softdevice-meshymesh-deploy.jlink  upload_fruitymesh.jlink  upload_softdevice_only.jlink
inc/: buzzer.h  command.h  connection.h  conversion.h  device.h  dfu.h  error.h  feedback.h  gap.h  gatt.h  heartbeat.h  led.h  linked_list.h  logger.h  main.h  mesh.h  message.h  pn532.h  queue.h  rtc.h  simple_uart.h  softdevice.h  storage.h  terminal.h  timer.h  util.h  votes.h
linker/: gilgamesh.ld  meshymesh.ld  thoughtmesh.ld
size_records/: no-minimization  round-1-nolog  round-2-nolog-noterm  round-3-nolog-noterm-nouart  round-4-nolog-noterm-nouart-i2c
src/: CMakeLists.txt  buzzer.c  command.c  connection.c  conversion.c  device.c  dfu.c  error.c  gap.c  gatt.c  gcc_startup_nrf51.s  heartbeat.c  led.c  linked_list.c  logger.c  main.c  mesh.c  pn532.c  queue.c  rtc.c  softdevice.c  terminal.c  timer.c  votes.c
src/app/: blinky_app.c  buzzer.c  c4_timer.c  feedback.c  led.c  nfc.c  rtc.c  storage.c  uart.c  vote_config.c  votes.c
src/app/custom_message_types/: group_value_message.c  vote_ack_message.c  vote_message.c  voting_heartbeat_message.c
src/app/pn532/: adafruit_pn532.c
src/message_types/: broadcast_message.c  handshake_message.c  heartbeat_message.c
src/nrf/: pn532.c  simple_uart.c
src/system/: delay.c  error.c  gpio.c  i2c.c  log.c  platform.c  pwm.c  storage.c  timer.c
tests/: CMakeLists.txt
tests/integration/: GapTest.cpp
tests/mocks/: bsp_mock.c  buzzer_mock.c  cmocka_includes.h  command_mock.c  connection_mock.c  connection_mock.h  conversion_mock.c  device_mock.c  dfu_mock.c  error_mock.c  error_mock.h  gap.h  gap_mock.c  gap_mock.h  gatt_mock.c  gatt_mock.h  heartbeat_mock.c  led_mock.c  logger_mock.c  logger_mock.h  pn532_mock.c  queue_mock.c  simple_uart_mock.c  softdevice_mock.c  terminal_mock.c  timer_mock.c  votes_mock.c
tests/mocks/app/: buzzer_mock.c  feedback_mock.c  led_mock.c  nfc_mock.c  rtc_mock.c  storage_mock.c  vote_config_mock.c  votes_mock.c
tests/mocks/app/custom_message_types/: group_value_message_mock.c  vote_ack_message_mock.c  vote_message_mock.c  voting_heartbeat_message_mock.c
tests/mocks/config/: pstorage_platform.h  pstorage_platform_mock.c
tests/mocks/fakeS130_v201/: ble_gap_mock.c  ble_gattc_mock.c  ble_gatts_mock.c  ble_l2cap_mock.c  ble_mock.c  nrf_sdm_mock.c  nrf_soc_mock.c
tests/mocks/fakeS130_v201/include/: nrf_nvic_mock.h
tests/mocks/fakeS130_v201/nrf51/: nrf_mbr_mock.c
tests/mocks/include/: cmocka_includes.h
tests/mocks/include/sdk12/components/device/: compiler_abstraction.h
tests/mocks/include/sdk12/components/libraries/util/: app_error.h  app_util.h  app_util_platform.h
tests/mocks/include/sdk12/components/toolchain/cmsis/include/: cmsis_gcc.h  core_cm0.h
tests/mocks/message_types/: broadcast_message_mock.c  handshake_message_mock.c  heartbeat_message_mock.c
tests/mocks/sdk/: nrf_delay.h  pstorage_mock.c  softdevice_handler.h  softdevice_handler_mock.c
tests/mocks/sdk/device/: nrf.h
tests/mocks/sdk/s130/: ble.h  ble_gap.h  ble_gap_mock.c  ble_gattc_mock.c  ble_gatts_mock.c  nrf_sdm.h  nrf_soc.h  nrf_soc_mock.c  nrf_svc.h
tests/mocks/sdk/toolchain/: core_cmInstr.h
tests/mocks/sdk11/components/ble/common/: ble_conn_state_mock.c
tests/mocks/sdk11/components/libraries/log/: nrf_log_mock.c
tests/mocks/sdk11/components/libraries/low_power_pwm/: low_power_pwm_mock.c
tests/mocks/sdk11/components/libraries/pwm/: app_pwm_mock.c
tests/mocks/sdk11/components/libraries/scheduler/: app_scheduler_mock.c
tests/mocks/sdk11/components/libraries/timer/: app_timer_mock.c
tests/mocks/sdk11/components/libraries/util/: app_error_mock.c  nrf_log_mock.c
tests/mocks/sdk11/components/softdevice/common/softdevice_handler/: softdevice_handler_mock.c
tests/mocks/sdk12/components/ble/common/: ble_conn_state_mock.c
tests/mocks/sdk12/components/libraries/fds/: fds_mock.c
tests/mocks/sdk12/components/libraries/low_power_pwm/: low_power_pwm_mock.c
tests/mocks/sdk12/components/libraries/scheduler/: app_scheduler_mock.c
tests/mocks/sdk12/components/libraries/timer/: app_timer_mock.c
tests/mocks/sdk12/components/libraries/util/: app_error_mock.c  app_util_mock.c  app_util_platform_mock.c
tests/mocks/sdk12/components/softdevice/common/softdevice_handler/: softdevice_handler_appsh_mock.c  softdevice_handler_mock.c
tests/mocks/sdk12/components/toolchain/cmsis/: cmsis_gcc_mock.c  core_cm0_mock.c
tests/mocks/system/: delay_mock.c  error_mock.c  gpio_mock.c  platform_mock.c  pwm_mock.c  rtc_mock.c  storage_mock.c  timer_mock.c
tests/unit/: CommandTest.c  CommandTest.h  ConnectionTest.c  ConnectionTest.h  ConversionTest.c  ConversionTest.h  GapTest.c  GapTest.h  GattTest.c  GattTest.h  LedTest.c  LinkedListTest.c  LinkedListTest.h  MainTest.c  Pn532Test.c  Pn532Test.h  QueueTest.c  QueueTest.h  RunTests.c  TerminalTest.c  TerminalTest.h  VotesTest.c  VotesTest.h  cmocka_includes.h
tests/unit/app/: BuzzerTest.c  FeedbackTest.c  LedTest.c  RTCTest.c  StorageTest.c  VoteConfigTest.c
tests/unit/app/custom_message_types/: GroupValueMessageTest.c  VoteAckMessageTest.c  VoteMessageTest.c  VotingHeartbeatMessageTest.c
tests/unit/message_types/: BroadcastMessageTest.c  HandshakeMessageTest.c  HeartbeatMessageTest.c
(+39 files in other folders)
